# CHANGELOG

## next

* Nothing yet.

## v0.3.1

* Update comment in dist/http-client.min.js to mention
  correct version.

## v0.3.0

* Add `patch` method to HttpClient.